--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -213,7 +213,7 @@ en:
       title: "You are member of the following teams:"
       team: Team
     new:
-      title: New Team
+      title: New team
     edit:
       title: Edit team
     description:
