--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -227,7 +227,7 @@ ru:
           root: "Пользователь Root не может быть удалён"
         update:
           root: "Пользователь Root не может быть изменён"
-          ldap: "Ldap-пользователь не может быть изменён"
+          not_db: "Ldap-пользователь не может быть изменён"
       maintenance_tasks:
         succeed: "Задача успешно выполнена."
         failed: "Задача не выполнена. Детали в логах."
