--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -137,7 +137,7 @@ zh:
     show:
       move: "移动帐户到其他组"
       title: "%{team_name} 团队中 %{folder_name} 组的成员帐户"
-  items:
+  file_entries:
     new:
       title: "添加附件到帐户"
       upload: "待上传文件"
@@ -235,7 +235,7 @@ zh:
     folders:
       created: "成功创建一个新的组。"
       updated: "成功更新一个新的组。"
-    items:
+    file_entries:
       uploaded: "文件被成功上传。"
       uploaded_size_to_high: "文件太大不能上船。(最大为：10MB)"
       uploaded_filename_is_empty: "文件必须被命名"
@@ -280,7 +280,7 @@ zh:
         user:
           new_password_invalid: "你的新密码错误"
           old_password_invalid: "你的旧密码错误"
-        item:
+        file_entry:
           attributes:
             filename:
               blank: '文件不存在'
