--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -154,6 +154,11 @@ ru:
       title: "Вход"
       description: "Введите имя пользователя и пароль для входа в cryptopus"
       submit: "Войти"
+    local:
+      new:
+        title: "Вход"
+        description: "Введите имя пользователя и пароль для входа в cryptopus"
+        submit: "Войти"
     destroy:
       title: "Выйти"
       message: "До свидания"
