--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -148,6 +148,11 @@ zh:
       title: "登陆"
       description: "请输入用户名和密码访问cryptopus"
       submit: "登陆"
+    local:
+      new:
+        title: "登陆"
+        description: "请输入用户名和密码访问cryptopus"
+        submit: "登陆"
     destroy:
       title: "注销"
       message: "再见"
