--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -122,7 +122,7 @@ fr:
         title: La Liste de toutes les utilisateurs
         username: Nom d'utilisateur
         name: Nom
-        ldap_uid: LDAP UID
+        provider_uid: PROVIDER UID
         last_login_at: Dernière connexion à
         last_login_from: Dernière connexion de
         admin: Admin
@@ -169,6 +169,11 @@ fr:
       title: Identifiez-vous
       description: S'il vous plaît entrer un nom d'utilisateur valide et mot de passe.
       submit: S'identifier
+    local:
+      new:
+        title: Identifiez-vous
+        description: S'il vous plaît entrer un nom d'utilisateur valide et mot de passe.
+        submit: S'identifier
     destroy:
       title: Déconnexion
       message: Au revoir
@@ -299,7 +304,7 @@ fr:
           root: Root ne peut pas être supprimé
         update:
           root: Root ne peuvent pas être mis à jour
-          ldap: Ldap utilisateur ne peuvent pas être mis à jour
+          not_db: Utilisateur non Db ne peut pas être mis à jour
       maintenance_tasks:
         succeed: La tâche a été exécutée avec succès..
         failed: La tâche a échoué. Consultez les journaux pour plus d'informations.
