--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -194,6 +194,11 @@ de:
         title: Anmelden
         description: Bitte geben Sie Ihren Benutzernamen und Ihr Passwort ein um Cryptopus zu verwenden.
         submit: Anmelden
+    sso:
+      inactive:
+        title: Anmelden
+        submit: Anmelden
+        inactive: Deine Cryptopus session ist inaktiv
     destroy:
       title: Abmelden
       message: Aufwiedersehen
