--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -192,6 +192,11 @@ en:
         title: Log in
         description: Please enter your username and password to access cryptopus
         submit: Login
+    sso:
+      inactive:
+        title: Log in
+        submit: Login
+        inactive: Your Cryptopus session is inactive
     destroy:
       title: Logout
       message: Bye
