--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -61,13 +61,13 @@ en:
       create: Create Account
       folder: Folder
     show_menu:
-      add_attachment: Add attachment
+      add_attachment: Add Attachment
     edit:
-      title: Edit account
+      title: Edit Account
       random_password: Random password
       edit_password_placeholder: Click or focus to set ...
-      team_placeholder: Select a team
-      folder_placeholder: Select a folder
+      team_placeholder: Select a Team
+      folder_placeholder: Select a Folder
       password_strength: Password Strength
       password_strengths:
         weak: Weak
@@ -80,7 +80,7 @@ en:
       attachments: Attachments
       file: File
       show_password: Show password
-      add_attachment: Add attachment
+      add_attachment: Add Attachment
     new:
       title: New Account
 
@@ -88,9 +88,9 @@ en:
     title: Admin
     maintenance_tasks:
       index:
-        title: Maintenance tasks
+        title: Maintenance Tasks
         unavailable: No maintenance tasks available
-        maintenance_task: Maintenance tasks
+        maintenance_task: Maintenance Tasks
         run: execute
         prepare: prepare
         execute: execute
@@ -123,7 +123,7 @@ en:
         send: Send request
     users:
       index_menu:
-        create: Create new user
+        create: Create new User
       edit:
         title: Editing user
         reset_password: Reset password
@@ -137,14 +137,14 @@ en:
         last_login_from: Last login from
         admin: Admin
         action: Action
-        locked: Locked users
+        locked: Locked Users
         unlock: Unlock
       last_teammember_teams:
         message: Before you can delete this user you have to delete the following teams, because the user is the last member.
         delete_user: Are you sure you want to delete this User?
         destroy: Destroy User
       new:
-        title: New user
+        title: New User
     teams:
       index:
         title: Teams
@@ -157,9 +157,9 @@ en:
     title: Folders
     name: Folder name
     index_menu:
-      create: Create folder
+      create: Create Folder
     edit:
-      title: Editing folder
+      title: Editing Folder
     new:
       title: New Folder
     show:
@@ -222,9 +222,9 @@ en:
       title: "You are member of the following teams:"
       team: Team
     new:
-      title: New team
+      title: New Team
     edit:
-      title: Edit team
+      title: Edit Team
     description:
       private: admins have no access if checked
     show:
