--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -95,7 +95,8 @@ ch_be:
       title: Account editiere
       random_password: Zuefäuigs Passwort
       edit_password_placeholder: Klickä oder fokusierä für Igab ...
-      team_placeholder: Wähl es Team us
+      team_placeholder: Wähl äs Team us
+      folder_placeholder: Wähl ä Ordner us
       password_strength: Passwort Sterchi
       password_strengths:
         weak: Schwach
