--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -38,6 +38,7 @@ ch_be:
   team: Team
   move: Bewegä
   here: hiä
+  new: Nöi
   save: Spichere
   close: Schliesse
   user: Benutzer
@@ -81,7 +82,7 @@ ch_be:
     title: Suechä
     index:
       hi_user: "Hallo %{username}! Suechsch es Passwort?"
-      no_results_found: keni Ergäbniss gfunde
+      no_results_found: äuä nüt gfunde
       type_to_search: Tippe für z sueche...
 
   accounts:
@@ -119,9 +120,15 @@ ch_be:
     maintenance_tasks:
       index:
         title: Wartigsufgabe
-        unavailable: Keni Wartigsufgabe verfüegbar
+        unavailable: Äuä ke Wartigsufgabe verfüegbar
         maintenance_task: Wartigsufgab
         run: Usfüehre
+        prepare: Vorbereite
+        execute: Usführe
+        executed_at: Usgführt am
+        status: Status
+        output: Output
+        executor: Usführer
     settings:
       index:
         title: Istellige bearbeite
@@ -171,6 +178,13 @@ ch_be:
         destroy: Benutzer lösche
       new:
         title: Nöie Benutzer
+    teams:
+      index:
+        title: Teams
+        teamname: Teamname
+        num_folders: Ahzahl Ordner
+        num_accounts: Ahzahl Accounts
+        members: Mitglieder
 
   folders:
     title: Ordner
