--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -173,6 +173,7 @@ en:
     show:
       move: Move account to other folder
       title: "Accounts in folder %{folder_name} for team %{team_name}"
+    no_folders: No Folders
   file_entries:
     new:
       title: Add new attachment to account
