Implement start page, refs: #54527

--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -42,6 +42,7 @@ ch_be:
   save: Spichere
   close: Schliesse
   user: Benutzer
+  select_team: Wähl bitte es team us oder benutz d suechi
   api-user:
     none: Du hesch kei Api-Benutzer. Hol dr einä
   time:
