--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -44,6 +44,7 @@ de:
   new: Neu
   save: Speichern
   close: Schliessen
+  select_team: Wählen Sie bitte ein Team aus oder nutzen Sie die Suche
 
   i18n:
     language:
