Add favourising teams and filtering by favourites, refs: #53708

--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -253,6 +253,7 @@ ch_be:
 
   teams:
     title: Teams
+    none_available: Kener Teams verfüegbar
     edit:
       title: Team bearbeite
     configure:
