--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -226,6 +226,7 @@ fr:
 
   teams:
     title: Équipes
+    none_available: Aucune équipe disponible
     form:
       enabled: Activé
       private: Privé
