--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -226,6 +226,7 @@ fr:
 
   teams:
     title: Équipes
+    none_available: Aucune équipe disponible
     form:
       enabled: Activé
       private: Privé
