--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -309,8 +309,8 @@ fr:
         token:
           renew: "%{username} a été renouvelé, nouveau jeton: %{token}"
     members:
-      added: "%{username} a été enlevé avec succès à l'équipe"
-      removed: "%{username} a été ajouté avec succès à l'équipe"
+      added: Membre de l'équipe a été enlevé avec succès
+      removed: Membre de l'équipe a été ajouté avec succès
     wizard:
       fill_password_fields: S'il vous plaît remplir tous les champs
       paswords_do_not_match: Les mots de passe ne correspondent pas
@@ -343,14 +343,19 @@ fr:
     accounts:
       created: Compte créé avec succès.
       updated: Compte modifiée avec succès.
+      deleted: Compte a été supprimé.
       moved: Le team a été déplacé avec succès.
+      username_copied: Le nom d'utilisateur a été copié
+      password_copied: Le mot de passe a été copié
     application:
       wait: S'il vous plaît attendre jusqu'à ce vos mots de passe a ètè nouveau cryptées.
     folders:
       created: Dossier créé avec succès.
       updated: Dossier modifiée avec succès
+      deleted: Dossier a été supprimé.
     file_entry:
       uploaded: Fichier téléchargé avec succès.
+      deleted: Fichier a été supprimé.
       uploaded_size_to_high: Fichier est trop volumineux pour tèlècharger. (max. 10MB)
       uploaded_filename_is_empty: Le fichier n'a pas été nommé
       uploaded_file_inexistent: Fichier est inexistant
