--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -251,7 +251,7 @@ de:
     index:
       title: 'Sie sind Mitglied der folgenden Teams:'
       team: Team
-      no_content: Nichts passendes zur Suche gefunden
+      no_content: Keine Einträge gefunden
     new:
       title: Neues Team erstellen
     edit:
