--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -237,6 +237,7 @@ fr:
     index:
       title: "Vous êtes membre des équipes suivantes:"
       team: Équipe
+      no_content: Aucune donnée trouvée
     edit:
       title: Modifier l'équipe
     new:
